# wigxjpf-cmake

./: .gitignore  CMakeLists.txt  Config.cmake.in  README.md
cfg/: CMakeLists.txt  wigxjpf_config.h
cmake/: AutoConfigureWIGXJPF.cmake
example/: CMakeLists.txt
src/: CMakeLists.txt
